# interview-prep

./: .env.example  .gitignore  Caddyfile  Caddyfile.http  IMPLEMENTATION_ROADMAP.md  LAUNCH_SUMMARY.md  PRODUCT_SPEC_PHASE1.md  QUICK_START_IMPLEMENTATION.md  README.md  pyproject.toml  requirements.txt  schema.sql  start.sh
.claude/: settings.local.json
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
client/src/components/: ActiveSession.jsx  AdminView.jsx  AnalysisView.jsx  AudioPlayer.jsx  CoachingHint.jsx  CommandCenter.jsx  ConfigurationView.jsx  Dashboard.jsx  EvaluationCard.jsx  GhostTranscript.jsx  GradientOrbs.jsx  HistoryView.jsx  InterviewPipeline.jsx  InterviewReadinessDialog.jsx  InterviewView.jsx  Layout.jsx  LoginScreen.jsx  MindmapViewer.jsx  OnboardingFlow.backup.jsx  OrbVisualizer.jsx  PDFDropzone.jsx  ParticleBackground.jsx  ReadinessMeter.jsx  RecentSessionsList.jsx  SessionCard.jsx  SessionReport.jsx  SettingsView.jsx  SignupScreen.jsx  SkillProficiencyCard.jsx  SkillProficiencyGrid.jsx  ThinkingTerminal.jsx  TourGuide.jsx  V0Setup.jsx
client/src/lib/: mediaReadiness.js  questionAudio.js  quickInterviewConfig.js
client/src/store/: useInterviewStore.js
scripts/: setup_whisper_cpp.sh
server/: __init__.py  config.py  main.py  metrics.py  session.py  transcript.py  tts_warmup.py
server/agents/: __init__.py  interview_nodes.py  nodes.py  state.py
server/routes/: __init__.py  audio_events.py  auth_events.py  interview_events.py  preferences_events.py  rest.py
server/services/: audio_service.py  cache.py  coaching_service.py  database.py  llm_factory.py  tts_service.py  user_database.py  vector_service.py
server/tests/: test_admin_rest_routes.py  test_career_analysis_pipeline.py  test_interview_nodes_feedback_v2.py  test_main_retry_events.py  test_preferences_events_resume.py  test_transcript_submission_guard.py  test_user_database_retries.py  test_user_database_session_events.py  test_whisper_cpp_gpu_detection.py
server/tools/: __init__.py  job_tool.py  resume_tool.py
user_data/: interview_app.db
(+3 files in other folders)
